[package]
name = "blocktop"
version = "0.1.0"
edition = "2021"

authors = ["Jack McPherson <jack@jmcph4.dev>"]
license = "MIT"
description = "A minimalist TUI block explorer for Ethereum blockchains"
repository = "https://github.com/jmcph4/blocktop"
readme = "README.md"
keywords = ["blockchain", "ethereum", "cryptocurrency"]
categories = ["cryptography::cryptocurrencies", "development-tools"]

[dependencies]
alloy = { version = "0.9.1", features = ["provider-ws", "rpc-types-eth", "provider-ipc"] }
chrono = "0.4.39"
clap = { version = "4.5.23", features = ["derive"] }
crossterm = "0.28.1"
eyre = "0.6.12"
futures = "0.3.31"
log = "0.4.22"
pretty_env_logger = "0.5.0"
r2d2 = "0.8.10"
r2d2_sqlite = "0.26.0"
ratatui = "0.29.0"
rusqlite = { version = "0.33.0", features = ["bundled"] }
timeago = "0.4.2"
tokio = { version = "1.42.0", features = ["rt-multi-thread"] }
url = "2.5.4"
webbrowser = "1.0.3"
serde_json = "1.0.137"
lazy_static = "1.4"
serde = { version = "1.0.217", features = ["derive"] }


[[bin]]
name = "blocktop"

